# cpp-realtime-video-analytics

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: build.yml
cmake/: FindONNXRuntime.cmake
docs/: ARCHITECTURE.md  DEVELOPMENT.md
docs/journals/: 260330-phase07-optimization-polish.md
scripts/: quantize-fp16.py
src/: CMakeLists.txt  main.cpp
src/benchmark/: benchmark-report.hpp  latency-tracker.hpp
src/capture/: opencv-capture.cpp  opencv-capture.hpp  video-capture.hpp
src/inference/: detection.hpp  inference-engine.cpp  inference-engine.hpp  post-process.cpp  post-process.hpp  pre-process.cpp  pre-process.hpp
src/pipeline/: bounded-queue.hpp  frame-data.hpp  pipeline.cpp  pipeline.hpp
src/server/: result-serializer.hpp  sse-server.cpp  sse-server.hpp
src/utils/: fps-tracker.hpp
tests/: CMakeLists.txt  test-inference.cpp  test-latency-tracker.cpp  test-pipeline.cpp  test-serializer.cpp
web/: app.css  app.js  index.html
